--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
             diversificado. Tendo uma seção para criar cadastro, assim tornando mais responsivo para se integram em aplicações web.</p>
             <a href="https://tela-login-beige.vercel.app/" target="_blank" rel="noopener noreferrer"> <p>&RightArrow; Veja</p></a>
           </div>
+          <div class="quarto-projeto">
+            <div class="img-quarto-projeto">
+              <img src="imagens/quarto-projeto-demonstracao.png" alt="Imagem de um projeto de base de dados">
+            </div>
+            <h3>CELIKY | BASE DE DADOS</h3>
+            <p>Celiky é uma base de dados baseada em astronomia, traz um design minimaslista, e simplicidade. a base contém dados sobre todos os planetas do sistema solar, algumas galáxias importantes e os 3 principais buracos negros.</p>
+            <a href="https://base-de-dados-astronomia.vercel.app/" target="_blank" rel="noopener noreferrer"> <p>&RightArrow; Veja</p> </a>
+          </div>
         </div>
       </section>
       <!--CONTATO-->
