--- a/index.html
+++ b/index.html
@@ -125,11 +125,12 @@
           </div>
           <div class="segundo-projeto">
             <div class="img-segundo-projeto">
-              <img src="imagens/segundo-projeto-demonstracao.png" alt="Imagem do inicio da seção inicial de uma landing page da pizzaria Men's evolution">
+              <img src="imagens/segundo-projeto-demonstracao.png" alt="Imagem do inicio da seção inicial de um site da 
+              Sliders Design">
             </div>
-            <h3>LANDING PAGE PIZZARIA MEN'S EVOLUTION</h3>
-            <p>Essa landing page foi totalmente focada no profile da pizzaria. Trazendo a principal ideia da empresa, assim constituindo uma intimidade com o visitante.</p>
-            <a href="https://pizzaria-mensevolution.vercel.app/" target="_blank" rel="noopener noreferrer"> <p>&RightArrow; Veja</p></a>
+            <h3>Web Site Design vestidos</h3>
+            <p>Esse Web site foi totalmente focada no profile de uma empresa de design de vestidos. Trazendo a principal ideia da empresa, assim constituindo uma intimidade com o visitante, design detalhado e inovador.</p>
+            <a href="https://design-vestidos.vercel.app/" target="_blank" rel="noopener noreferrer"> <p>&RightArrow; Veja</p></a>
           </div>
           <div class="terceiro-projeto">
             <div class="img-terceiro-projeto">
